--- a/package.json
+++ b/package.json
@@ -47,10 +47,10 @@
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.4",
     "react-dom": "^16.5.2",
+    "react-grid-layout": "^0.16.6",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-redux": "^4.0.8",
-    "react-split-pane": "^0.1.84",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
