--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
     "react-dev-utils": "^6.0.5",
+    "react-dnd": "^5.0.0",
+    "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.5.2",
     "react-grid-layout": "^0.16.6",
     "react-redux": "^5.0.7",
