--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
+    "react-contextmenu": "^2.9.4",
     "react-dev-utils": "^6.0.5",
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
@@ -53,6 +54,8 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-redux": "^4.0.8",
+    "react-split-pane": "^0.1.84",
+    "react-splitter-layout": "^3.0.1",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "resolve": "1.8.1",
