--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.5.2",
     "react-app-polyfill": "^0.1.3",
+    "react-contexify": "^4.0.0-rc2",
     "react-contextmenu": "^2.9.4",
     "react-dev-utils": "^6.0.5",
     "react-dnd": "^5.0.0",
