--- a/package.json
+++ b/package.json
@@ -51,7 +51,10 @@
     "react-dnd": "^5.0.0",
     "react-dnd-html5-backend": "^5.0.1",
     "react-dom": "^16.5.2",
+    "react-draggable": "^3.0.5",
     "react-grid-layout": "^0.16.6",
+    "react-node-graph": "^1.1.1",
+    "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-redux": "^4.0.8",
