--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-draggable": "^3.0.5",
     "react-grid-layout": "^0.16.6",
     "react-node-graph": "^1.1.1",
+    "react-numeric-input": "^2.2.3",
     "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
