--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "jest-pnp-resolver": "1.0.1",
     "jest-resolve": "23.6.0",
     "jquery": "^3.3.1",
+    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.4.3",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.1.0",
@@ -53,7 +54,6 @@
     "react-dom": "^16.5.2",
     "react-draggable": "^3.0.5",
     "react-grid-layout": "^0.16.6",
-    "react-node-graph": "^1.1.1",
     "react-numeric-input": "^2.2.3",
     "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.0.7",
