--- a/package.json
+++ b/package.json
@@ -80,7 +80,10 @@
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
-    "extends": "react-app"
+    "extends": "react-app",
+    "globals":{
+        "_" : true
+    }
   },
   "browserslist": [
     ">0.2%",
