--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "substance",
+  "name": "subs",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.3.3",
+    "@babel/core": "7.2.2",
+    "@fortawesome/fontawesome-free": "^5.7.2",
     "@svgr/webpack": "4.1.0",
-    "ajv": "^6.9.1",
     "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "10.0.1",
-    "babel-jest": "^24.1.0",
+    "babel-eslint": "9.0.0",
+    "babel-jest": "23.6.0",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.1",
     "babel-preset-react-app": "^7.0.1",
     "bfj": "6.1.1",
     "bootstrap": "^4.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
-    "chalk": "2.4.2",
     "connected-react-router": "^6.3.1",
-    "css-loader": "2.1.0",
-    "dotenv": "6.2.0",
+    "css-loader": "1.0.0",
+    "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
-    "eslint": "5.14.0",
+    "eslint": "5.12.0",
     "eslint-config-react-app": "^3.0.7",
-    "eslint-loader": "2.1.2",
-    "eslint-plugin-flowtype": "3.4.2",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
+    "eslint-loader": "2.1.1",
+    "eslint-plugin-flowtype": "2.50.1",
+    "eslint-plugin-import": "2.14.0",
+    "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.12.4",
-    "file-loader": "3.0.1",
+    "file-loader": "2.0.0",
+    "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
-    "jest": "^24.1.0",
-    "jest-pnp-resolver": "1.1.0",
-    "jest-resolve": "24.1.0",
+    "jest": "23.6.0",
+    "jest-pnp-resolver": "1.0.2",
+    "jest-resolve": "23.6.0",
+    "jest-watch-typeahead": "^0.2.1",
     "jquery": "^3.3.1",
-    "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.5.0",
+    "opencv4nodejs": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "popper.js": "^1.14.7",
@@ -45,19 +46,15 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
-    "react": "^16.8.2",
+    "react": "^16.8.3",
     "react-app-polyfill": "^0.2.1",
-    "react-contexify": "^4.0.1",
     "react-contextmenu": "^2.10.0",
     "react-dev-utils": "^7.0.3",
     "react-dnd": "^7.0.2",
     "react-dnd-html5-backend": "^7.0.2",
-    "react-dom": "^16.8.2",
-    "react-draggable": "^3.1.1",
+    "react-dom": "^16.8.3",
     "react-grid-layout": "^0.16.6",
-    "react-numeric-input": "^2.2.3",
-    "react-onclickoutside": "^6.7.1",
-    "react-redux": "^6.0.0",
+    "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-split-pane": "^0.1.85",
     "react-splitter-layout": "^3.0.1",
@@ -69,8 +66,8 @@
     "terser-webpack-plugin": "1.2.2",
     "three-full": "^11.3.2",
     "url-loader": "1.1.2",
-    "webpack": "4.29.4",
-    "webpack-dev-server": "^3.1.14",
+    "webpack": "4.28.3",
+    "webpack-dev-server": "3.1.14",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
   },
@@ -80,10 +77,7 @@
     "test": "node scripts/test.js"
   },
   "eslintConfig": {
-    "extends": "react-app",
-    "globals": {
-      "_": true
-    }
+    "extends": "react-app"
   },
   "browserslist": [
     ">0.2%",
@@ -93,25 +87,26 @@
   ],
   "jest": {
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!src/**/*.d.ts"
     ],
     "resolver": "jest-pnp-resolver",
     "setupFiles": [
       "react-app-polyfill/jsdom"
     ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.{js,jsx}",
-      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx}"
+      "<rootDir>/src/**/__tests__/**/*.{js,jsx,ts,tsx}",
+      "<rootDir>/src/**/?(*.)(spec|test).{js,jsx,ts,tsx}"
     ],
     "testEnvironment": "jsdom",
     "testURL": "http://localhost",
     "transform": {
-      "^.+\\.(js|jsx)$": "<rootDir>/node_modules/babel-jest",
+      "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
+      "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
     "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$",
+      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|ts|tsx)$",
       "^.+\\.module\\.(css|sass|scss)$"
     ],
     "moduleNameMapper": {
@@ -121,18 +116,23 @@
     "moduleFileExtensions": [
       "web.js",
       "js",
+      "web.ts",
+      "ts",
+      "web.tsx",
+      "tsx",
       "json",
       "web.jsx",
       "jsx",
       "node"
+    ],
+    "watchPlugins": [
+      "F:\\Code\\vsCode\\JS\\subs\\node_modules\\jest-watch-typeahead\\filename.js",
+      "F:\\Code\\vsCode\\JS\\subs\\node_modules\\jest-watch-typeahead\\testname.js"
     ]
   },
   "babel": {
     "presets": [
       "react-app"
     ]
-  },
-  "devDependencies": {
-    "@fortawesome/fontawesome-free": "^5.7.2"
   }
 }
