--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-import": "2.16.0",
     "eslint-plugin-jsx-a11y": "6.2.1",
     "eslint-plugin-react": "7.12.4",
+    "express": "^4.16.4",
     "file-loader": "3.0.1",
     "fs-extra": "7.0.1",
     "history": "^4.7.2",
@@ -35,7 +36,7 @@
     "jest": "^24.1.0",
     "jest-pnp-resolver": "1.1.0",
     "jest-resolve": "24.1.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "lodash": "^4.17.11",
     "mini-css-extract-plugin": "0.5.0",
     "optimize-css-assets-webpack-plugin": "5.0.1",
@@ -67,7 +68,7 @@
     "sass-loader": "7.1.0",
     "style-loader": "0.23.1",
     "terser-webpack-plugin": "1.2.2",
-    "three-full": "^11.3.2",
+    "three-full": "^17.1.0",
     "url-loader": "1.1.2",
     "webpack": "4.29.4",
     "webpack-dev-server": "^3.1.14",
