--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "subs",
+  "name": "substance",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -8,7 +8,7 @@
     "@svgr/webpack": "4.1.0",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "9.0.0",
-    "babel-jest": "23.6.0",
+    "babel-jest": "^24.8.0",
     "babel-loader": "8.0.5",
     "babel-plugin-named-asset-import": "^0.3.1",
     "babel-preset-react-app": "^7.0.1",
@@ -26,32 +26,18 @@
     "eslint-plugin-import": "2.14.0",
     "eslint-plugin-jsx-a11y": "6.1.2",
     "eslint-plugin-react": "7.12.4",
-<<<<<<< HEAD
-    "express": "^4.16.4",
-    "file-loader": "3.0.1",
-=======
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
->>>>>>> 93507b46f9e379ed38ead13a33c48a8f8c1a14e6
     "fs-extra": "7.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
-<<<<<<< HEAD
-    "jest": "^24.1.0",
-    "jest-pnp-resolver": "1.1.0",
-    "jest-resolve": "24.1.0",
-    "jquery": "^3.4.1",
-    "lodash": "^4.17.11",
-=======
-    "jest": "23.6.0",
+    "jest": "^24.8.0",
     "jest-pnp-resolver": "1.0.2",
     "jest-resolve": "23.6.0",
     "jest-watch-typeahead": "^0.2.1",
-    "jquery": "^3.3.1",
->>>>>>> 93507b46f9e379ed38ead13a33c48a8f8c1a14e6
+    "jquery": "^3.4.1",
     "mini-css-extract-plugin": "0.5.0",
-    "opencv4nodejs": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "popper.js": "^1.14.7",
