--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "babel-preset-react-app": "^7.0.1",
     "babel-register": "^6.26.0",
     "bfj": "6.1.1",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "case-sensitive-paths-webpack-plugin": "2.2.0",
+    "compression": "^1.7.4",
     "connected-react-router": "^6.3.1",
+    "cookie-parser": "^1.4.4",
     "css-loader": "1.0.0",
     "dotenv": "6.0.0",
     "dotenv-expand": "4.2.0",
@@ -35,6 +38,7 @@
     "file-loader": "2.0.0",
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "7.0.1",
+    "global": "^4.4.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
@@ -45,6 +49,7 @@
     "jest-watch-typeahead": "^0.2.1",
     "jquery": "^3.4.1",
     "mini-css-extract-plugin": "0.5.0",
+    "morgan": "^1.9.1",
     "optimize-css-assets-webpack-plugin": "5.0.1",
     "pnp-webpack-plugin": "1.2.1",
     "popper.js": "^1.14.7",
@@ -60,6 +65,8 @@
     "react-dnd-html5-backend": "^7.0.2",
     "react-dom": "^16.8.3",
     "react-grid-layout": "^0.16.6",
+    "react-helmet": "^5.2.1",
+    "react-loadable": "^5.5.0",
     "react-redux": "^6.0.1",
     "react-router-dom": "^4.3.1",
     "react-split-pane": "^0.1.85",
