--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "bserver": "babel"
+    "bserver": "node src/server/bootstrap.js"
   },
   "eslintConfig": {
     "extends": "react-app"
