--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "postcss-loader": "3.0.0",
     "postcss-preset-env": "6.5.0",
     "postcss-safe-parser": "4.0.1",
+    "pretty": "^2.0.0",
     "react": "^16.8.3",
     "react-app-polyfill": "^0.2.1",
     "react-contextmenu": "^2.10.0",
@@ -88,7 +89,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "bserver": "node src/server/bootstrap.js"
+    "server": "nodemon src/server/bootstrap.js"
   },
   "eslintConfig": {
     "extends": "react-app"
