--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "pretty": "^2.0.0",
     "react": "^16.8.6",
     "react-app-polyfill": "^1.0.1",
+    "react-collapsible": "^2.6.0",
     "react-color": "^2.17.3",
     "react-contextmenu": "^2.11.0",
     "react-dev-utils": "^7.0.3",
