--- a/package.json
+++ b/package.json
@@ -153,6 +153,7 @@
     ]
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-bridge.0"
+    "babel-core": "^7.0.0-bridge.0",
+    "worker-plugin": "^3.1.0"
   }
 }
