--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "fork-ts-checker-webpack-plugin-alt": "0.4.14",
     "fs-extra": "8.1.0",
     "global": "^4.4.0",
+    "hex-rgb": "^4.1.0",
     "history": "^4.9.0",
     "html-webpack-plugin": "4.0.0-alpha.2",
     "identity-obj-proxy": "3.0.0",
