--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "webpack": "4.38.0",
     "webpack-dev-server": "3.7.2",
     "webpack-manifest-plugin": "2.0.4",
+    "webworker-threads": "^0.7.17",
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
